--- a/index.html
+++ b/index.html
@@ -28,18 +28,13 @@
           <h3>$59.99/year</h3>
         </div>
         <div class="plan-button-container">
-          <button type="button change"><u>Change</u></button>
+          <button class="button change"><u>Change</u></button>
         </div>
 
       </div>
       <button class="button confirmation">Proceed to Payment</button>
       <button class="button cancellation">Cancel Order</button>
     </div>
-  </div>
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://www.github.com/colmpat">Colm Lang</a>.
   </div>
 </body>
 </html>
